ConnectivityManager, Second screen improves

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GiphyTetsApp</string>
+    <string name="wrong_connection">Something went wrong</string>
 </resources>
